Fix Image Width on Mobile

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ ol li::marker {
 }
 
 img {
-	max-width:70rem;
+	max-width:95%;
 	margin:10px 0;
 }
 
